# sovereign-agent-openclaw-python-sdk

./: GETTING_STARTED.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  ARCHITECTURE_TRANSPARENCY.md  TECHNICAL.md  USE_CASE_DYNAMIC_ROLE.md  USE_CASE_GENESIS.md  USE_CASE_INFILTRATION.md  USE_CASE_SKILL_DELEGATION.md  USE_CASE_TEAM_ASSEMBLY.md
examples/: dynamic_role_adaptation.py  example_agent.py  jane_agentic_promo.py  jane_promo_post.py  project_genesis_leader.py  sdk_promo_announcement.py  skill_delegation_demo.py  skill_registry.py  sovereign_engine.py  submolt_infiltration.py  team_assembly_demo.py
tools/hotspot_finder/: README.md  finder.py
